fix(coinbase): fail closed on malformed trading responses